# libtmpl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.win  README.md  TODO.txt  conanfile.txt  config.c  det_end.c  det_inline.c  devconfig.sh  emscripten.sh  libm_status.txt  make.bat  make.sh  make_cygwin.sh  make_inplace.sh  makeclang.bat  makew.bat  meson.build  monster.sh  remove.sh  test.c
examples/: CMakeLists.txt
examples/bytes/: test  tmpl_determine_endianness_example.c  tmpl_swap_bytes_example.c  tmpl_swap_most_significant_bit_2_alt_example.c  tmpl_swap_most_significant_bit_2_example.c  tmpl_swap_most_significant_bit_4_example.c  tmpl_swap_most_significant_bit_8_example.c
examples/bytes_examples/: CMakeLists.txt  tmpl_determine_endianness_example.c  tmpl_swap_bytes_example.c  tmpl_swap_most_significant_bit_2_alt_example.c  tmpl_swap_most_significant_bit_2_example.c  tmpl_swap_most_significant_bit_4_example.c  tmpl_swap_most_significant_bit_8_example.c
examples/complex_examples/: CMakeLists.txt  tmpl_complex_abs_double_example.c  tmpl_complex_abs_example.c  tmpl_complex_abs_float_example.c  tmpl_complex_abs_ldouble_example.c  tmpl_complex_abs_squared_double_example.c  tmpl_complex_abs_squared_example.c  tmpl_complex_abs_squared_float_example.c  tmpl_complex_abs_squared_ldouble_example.c  tmpl_complex_absf_example.c  tmpl_complex_absf_squared_example.c  tmpl_complex_absl_example.c  tmpl_complex_absl_squared_example.c  tmpl_complex_add_double_example.c  tmpl_complex_add_example.c  tmpl_complex_add_float_example.c  tmpl_complex_add_imag_double_example.c  tmpl_complex_add_imag_example.c  tmpl_complex_add_imag_float_example.c  tmpl_complex_add_imag_ldouble_example.c  tmpl_complex_add_imagf_example.c  tmpl_complex_add_imagl_example.c  tmpl_complex_add_ldouble_example.c  tmpl_complex_add_real_double_example.c  tmpl_complex_add_real_example.c  tmpl_complex_add_real_float_example.c  tmpl_complex_add_real_ldouble_example.c  tmpl_complex_add_realf_example.c  tmpl_complex_add_reall_example.c  tmpl_complex_addf_example.c  tmpl_complex_addl_example.c  tmpl_complex_argument_example.c  tmpl_complex_argumentf_example.c  tmpl_complex_argumentl_example.c
examples/differentiation_real_examples/: derivative_of_sin_plot.c
examples/euclidean_spatial_geometry_examples/: CMakeLists.txt  euclidean_norm_3d_example.c  tmpl_3ddouble_add_example.c  tmpl_three_vector_add_double_example.c  tmpl_three_vector_add_float_example.c  tmpl_three_vector_add_ldouble_example.c  tmpl_three_vector_add_to_double_example.c  tmpl_three_vector_add_to_float_example.c  tmpl_three_vector_add_to_ldouble_example.c  tmpl_three_vector_cross_product_double_example.c  tmpl_three_vector_cross_product_float_example.c  tmpl_three_vector_cross_product_ldouble_example.c  tmpl_three_vector_cross_with_double_example.c  tmpl_three_vector_cross_with_float_example.c  tmpl_three_vector_cross_with_ldouble_example.c  tmpl_three_vector_dot_product_double_example.c  tmpl_three_vector_dot_product_float_example.c  tmpl_three_vector_dot_product_ldouble_example.c  tmpl_three_vector_l2_norm_double_example.c
examples/idl/: tmpl_idl_bessel_j0.pro
examples/ieee754/: tmpl_get_base_2_exp32_example.c  tmpl_get_base_2_exp64_example.c  tmpl_get_high_word32_example.c  tmpl_get_high_word64_example.c  tmpl_get_mantissa32_example.c
examples/integer_examples/: CMakeLists.txt  tmpl_gcd_int_example.c  tmpl_gcd_uint_example.c  tmpl_sieve_of_eratosthenes_complexity.c  tmpl_sieve_of_eratosthenes_test.c  tmpl_sieve_or_eratosthanes_complexity.c
examples/integration_examples/: tmpl_numerical_integration_comparison_001.c
examples/knots/: tmpl_gauss_code_from_string_example.c
examples/knots_examples/: CMakeLists.txt  test  tmpl_gauss_code_from_string_example.c  tmpl_virtual_trefoil_genus_example.c
examples/math_examples/: CMakeLists.txt  tmpl_abs_double_example.c  tmpl_abs_float_example.c  tmpl_abs_ldouble_example.c  tmpl_arctan_double_example.c  tmpl_arctan_float_example.c  tmpl_arctan_ldouble_example.c  tmpl_infinity_example.c  tmpl_is_inf_double_example.c  tmpl_is_inf_float_example.c  tmpl_is_inf_ldouble_example.c  tmpl_is_nan_double_example.c  tmpl_is_nan_float_example.c  tmpl_is_nan_ldouble_example.c  tmpl_is_nan_or_inf_double_example.c  tmpl_nan_example.c  tmpl_sin_gnuplotutils.c
examples/number_theory/: tmpl_gcd_int_example.c  tmpl_sieve_or_eratosthanes_complexity.c
examples/number_theory_examples/: tmpl_gcd_uint_example.c
examples/numerical_examples/: CMakeLists.txt
examples/polynomial/: tmpl_add_polynomial_z_example_001.c  tmpl_add_polynomial_z_example_004.c  tmpl_deriv_polynomial_z_example_001.c  tmpl_subtract_polynomial_z_example_001.c
examples/polynomial_examples/: CMakeLists.txt  tmpl_add_polynomial_z_example_001.c  tmpl_add_polynomial_z_example_002.c  tmpl_add_polynomial_z_example_003.c  (+13 more)
include/: CMakeLists.txt  tmpl.h  tmpl_affine.h  tmpl_array_integer.h  tmpl_astro.h  tmpl_attributes.h  tmpl_bool.h  tmpl_bytes.h  tmpl_calendar.h  tmpl_cayley_table.h  tmpl_color.h  tmpl_compat_cast.h  tmpl_compat_stdlib.h  tmpl_complex.h  tmpl_complex_abs_squared_inline.h  tmpl_complex_add_inline.h  tmpl_complex_addto_inline.h  tmpl_complex_double.h  tmpl_complex_float.h  tmpl_complex_function_types.h  tmpl_complex_functional_types.h  tmpl_complex_ldouble.h  tmpl_complex_path_types.h  tmpl_complex_quick_abs_inline.h  tmpl_complex_vector.h  tmpl_config [conflicted 14].h  tmpl_config.h  tmpl_cyl_fresnel_optics.h  tmpl_differentiation_real.h  tmpl_doubledouble.h  tmpl_doubledouble_ldouble.h  tmpl_emag.h  tmpl_euclidean_planar_geometry.h  tmpl_euclidean_spatial_geometry.h  tmpl_fft.h  tmpl_float_barrier.h  tmpl_floatint.h  tmpl_fraunhofer_diffraction.h  tmpl_fresnel_diffraction.h  tmpl_generic.h  (+74 more)
src/: CMakeLists.txt  check.sh
tests/: CMakeLists.txt  chroot_unit_test.sh  config_libtmpl_compare.sh  double_tests.c  long_double_tests.c  test_float.c  test_ldouble.c  test_results_float.txt  tmpl_compare_funcs.h  tmpl_float_1in1out.c  tmpl_test_double.c  tmpl_test_float.c  unit_tests.sh
(+5917 files in other folders)
